# CLARIMOL

./: .gitignore  README.md  pyproject.toml
data/cod_cache/: name_to_smiles.json
data/cod_dev/: canonicalization.json  chain_length.json  fragment_assembly.json  functional_group.json  ring_counting.json
data/dev/: canonicalization.json  chain_length.json  fragment_assembly.json  functional_group.json  ring_counting.json
data/test/: chain_length.json  functional_group.json  ring_counting.json
scripts/: download_mol_instructions.sh  downstream_eval.sh  downstream_train.sh  evaluate_all.sh  gpu_monitor.py  plot_results.py  prepare_data.sh  train_4gb.sh  train_p100_fast.sh  train_parsing.sh  train_parsing_qwen.sh
src/clarimol/: __init__.py  __main__.py
src/clarimol.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/clarimol/data/: __init__.py  canonicalization.py  chain_length.py  cod.py  dataset.py  downstream.py  fragment_assembly.py  functional_group.py  functional_groups.yaml  sample.py  (+4 more)
training_duke/: README.md  deepspeed_config.json  job_2080_3b.slurm  job_ada_multi.slurm  job_ada_single.slurm  job_cod_5k.slurm  job_cod_eval.slurm  job_cod_openbabel.slurm  job_downstream.slurm  job_downstream_10k.slurm  job_downstream_20k.slurm  job_downstream_base_10k.slurm  job_downstream_eval.slurm  job_downstream_multi.slurm  job_eval_p100.slurm  job_h200_full_precision.slurm  job_h200_multi.slurm  job_h200_single.slurm  job_train_chembl.slurm  requirements.txt  run.sh  setup_env.sh
training_nrp/: README.md  requirements.txt  setup_env.sh  train.sh  train_nrp.ipynb
(+15 files in other folders)
